# sonarqube-to-github-issue-sync

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SonarCloud-GitHub Sync CLI PRD.md  action.yml  conftest.py  pyproject.toml  tasks-prd-sonarcloud-github-sync-cli.md
.github/: dependabot.yml
.github/workflows/: sonarcloud-sync.yml  tests.yml
src/sonarcloud_github_sync/: __init__.py  cli.py  config.py  github_client.py  logging_config.py  sonar_client.py  sync.py
tests/: __init__.py  test_cli.py  test_config.py  test_github_client.py  test_integration.py  test_sonar_client.py  test_sync.py
